# TrigFunction

./: .FuncClass.cpp.swp  Dockerfile  FuncClass  FuncClass.cpp  FuncClass.h  HTTP_Server.cpp  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  main.cpp  scriptA.sh  scriptB.sh  tests  tests.cpp
.deps/: FuncClass.Po  HTTP_Server.Po  main.Po
.github/workflows/: c-cpp.yml
autom4te.cache/: output.0  output.2  requests  traces.1
debian/: autoreconf.after  autoreconf.before  changelog  control  debhelper-build-stamp  files  func-class.substvars
debian/.debhelper/func-class/: dbgsym-build-ids
debian/.debhelper/func-class/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/func-class/dbgsym-root/usr/share/doc/: func-class-dbgsym
debian/func-class/DEBIAN/: control  md5sums
