AUTOMAKE_OPTIONS = foreign
bin_PROGRAMS = FuncClass
check_PROGRAMS = test_func_class
test_func_class_SOURCES = FuncClass.cpp FuncClass.h tests.cpp
FuncClass_SOURCES = main.cpp FuncClass.cpp FuncClass.h HTTP_Server.cpp
TESTS = test_func_class
EXTRA_DIST = Makefile.am
CXX = g++
CXXFLAGS = -Wall -std=c++11
